--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -3,18 +3,36 @@
 {% block title %}Hello BlogController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/demo/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/demo/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
-    </ul>
-</div>
+<section class="articles">
+    <article>
+        <h2>Titre de l'article</h2>
+        <div class="metadata">Ecrit le 21/02/2021 à 23:00 dans la catégorie Politique</div>
+        <div class="content">
+            <img src="http://placehold.it/350x150" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate culpa deserunt nulla ipsum in amet.</p>
+            <p>Commodi eius debitis quis quidem recusandae, magnam temporibus quo assumenda placeat, accusantium mollitia, sequi eligendi!</p>
+            <a href="{{ path('blog_show') }}" class="btnbtn-primary">Lire la suite</a>
+        </div>
+    </article>
+    <article>
+        <h2>Titre de l'article</h2>
+        <div class="metadata">Ecrit le 21/02/2021 à 23:00 dans la catégorie Politique</div>
+        <div class="content">
+            <img src="http://placehold.it/350x150" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus amet in sint! Illum, autem voluptatum.</p>
+            <p>Qui dolores corrupti repellat, quisquam minima, accusantium facilis unde repudiandae tenetur aliquid magni odit veritatis!</p>
+            <a href="{{ path('blog_show') }}" class="btnbtn-primary">Lire la suite</a>
+        </div>
+    </article>
+    <article>
+        <h2>Titre de l'article</h2>
+        <div class="metadata">Ecrit le 21/02/2021 à 23:00 dans la catégorie Politique</div>
+        <div class="content">
+            <img src="http://placehold.it/350x150" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem at necessitatibus modi enim natus neque.</p>
+            <p>Necessitatibus consequuntur aut consectetur minima vero amet voluptates voluptatum sit cumque ab, libero blanditiis est?</p>
+            <a href="{{ path('blog_show') }}" class="btnbtn-primary">Lire la suite</a>
+        </div>
+    </article>
+</section>
 {% endblock %}
