--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -4,35 +4,18 @@
 
 {% block body %}
 <section class="articles">
-    <article>
-        <h2>Titre de l'article</h2>
-        <div class="metadata">Ecrit le 21/02/2021 à 23:00 dans la catégorie Politique</div>
-        <div class="content">
-            <img src="http://placehold.it/350x150" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate culpa deserunt nulla ipsum in amet.</p>
-            <p>Commodi eius debitis quis quidem recusandae, magnam temporibus quo assumenda placeat, accusantium mollitia, sequi eligendi!</p>
-            <a href="{{ path('blog_show') }}" class="btn btn-primary">Lire la suite</a>
-        </div>
-    </article>
-    <article>
-        <h2>Titre de l'article</h2>
-        <div class="metadata">Ecrit le 21/02/2021 à 23:00 dans la catégorie Politique</div>
-        <div class="content">
-            <img src="http://placehold.it/350x150" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus amet in sint! Illum, autem voluptatum.</p>
-            <p>Qui dolores corrupti repellat, quisquam minima, accusantium facilis unde repudiandae tenetur aliquid magni odit veritatis!</p>
-            <a href="{{ path('blog_show') }}" class="btn btn-primary">Lire la suite</a>
-        </div>
-    </article>
-    <article>
-        <h2>Titre de l'article</h2>
-        <div class="metadata">Ecrit le 21/02/2021 à 23:00 dans la catégorie Politique</div>
-        <div class="content">
-            <img src="http://placehold.it/350x150" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem at necessitatibus modi enim natus neque.</p>
-            <p>Necessitatibus consequuntur aut consectetur minima vero amet voluptates voluptatum sit cumque ab, libero blanditiis est?</p>
-            <a href="{{ path('blog_show') }}" class="btn btn-primary">Lire la suite</a>
-        </div>
-    </article>
+
+    {% for article in articles %}        
+        <article>
+            <h2>{{ article.title }}</h2>
+            <div class="metadata">Ecrit le {{ article.createdAt | date('d/m/Y') }} à {{ article.createdAt | date('H:i') }} dans la catégorie Politique</div>
+            <div class="content">
+                <img src="{{ article.image}}" alt="">
+                {{ article.content | raw }}
+                <a href="{{ path('blog_show', {'id': article.id}) }}" class="btn btn-primary">Lire la suite</a>
+            </div>
+        </article>
+    {% endfor %}
+
 </section>
 {% endblock %}
