--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -1,8 +1,43 @@
 {% extends "base.html.twig" %}
+
+{% form_theme formArticle 'bootstrap_4_layout.html.twig' %}
+
 {% block body %}
 
     <h1>Création d'un article !</h1>
 
-    {{ form(formArticle) }}
+    {{ form_start(formArticle) }}
+    
+    {{ form_row(formArticle.title, {'attr': {'placeholder': "Titre de l'article"}}) }}
+    {{ form_row(formArticle.content, {'attr': {'placeholder': "Contenu de l'article"}}) }}
+    {{ form_row(formArticle.image, {'attr': {'placeholder': "Image de l'article"}}) }}
+    
+    <button type="submit" class="btn btn-success">Ajouter l'article</button>
+
+    {{ form_end(formArticle) }}
+    
+    {# Si l'affichage de form complet souhaité sans form_widget, form_start, form_end #}
+    {# {{ form(formArticle) }} #}
+
+    {# Form sans theme #}
+    
+    {# {{ form_start(formArticle) }}
+
+    <div class="form-group">
+        <label for="">Titre</label>
+        {{ form_widget(formArticle.title) }}
+    </div>
+    <div class="form-group">
+        <label for="">Content</label>
+        {{ form_widget(formArticle.content) }}
+    </div>
+    <div class="form-group">
+        <label for="">Image</label>
+        {{ form_widget(formArticle.image) }}
+    </div>
+
+    {{ form_end(formArticle) }} #}
+
+    {# {{ form(formArticle) }} //Si nous souhaitons une affichage par défaut et ne pas préciser le façon d'affichage comme ci dessus nous pouvon tout simplement utiliser cette ligne de code #}
 
 {% endblock %}
