création et édition depuis le même formulaire

--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -4,7 +4,12 @@
 
 {% block body %}
 
-    <h1>Création d'un article !</h1>
+    <h1>        
+    {% if editMode %}
+        Création d'un article
+    {% else %}
+        Editer d'un article
+    {% endif %}</h1>
 
     {{ form_start(formArticle) }}
     
@@ -12,8 +17,15 @@
     {{ form_row(formArticle.content, {'attr': {'placeholder': "Contenu de l'article"}}) }}
     {{ form_row(formArticle.image, {'attr': {'placeholder': "Image de l'article"}}) }}
     
-    <button type="submit" class="btn btn-success">Ajouter l'article</button>
+    <button type="submit" class="btn btn-success">
 
+        {% if editMode %}
+            Enregistrer les modifications
+        {% else %}
+            Ajouter l'article
+        {% endif %}
+    </button>
+        
     {{ form_end(formArticle) }}
     
     {# Si l'affichage de form complet souhaité sans form_widget, form_start, form_end #}
